--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 [dependencies]
 sdl2 = "0.37.0"
 rand = "0.9.0-beta.0"
+
+[target.'cfg(target_os="macos")'.dependencies.sdl2]
+features=["bundled"]
+version= "0.37.0"
