--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 [dependencies]
 sdl2 = "0.37.0"
 rand = "0.9.0-beta.0"
-clap = {version = "4.5.21", features = ["derive"]}
+clap = { version = "4.5.21", features = ["derive"] }
+spin_sleep = "1.1.1"
 
 [target.'cfg(target_os="macos")'.dependencies.sdl2]
-features=["bundled"]
-version= "0.37.0"
+features = ["bundled"]
+version = "0.37.0"
